width issue solve and unnecessary clases removed.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header></header>
 
     <main>
       <!-- Top section -->
@@ -48,7 +47,7 @@
             <div class="feature-box box-background-1">
               <div class="feature-photo">
                 <img
-                  class="feature-image-1"
+                  class="feature-image flower-image-1"
                   src="./Flower Asset/pngwing 6.png"
                   alt="Pink flower"
                 />
@@ -60,7 +59,7 @@
             <div class="feature-box box-background-2">
               <div class="feature-photo">
                 <img
-                  class="feature-image-2"
+                  class="feature-image flower-image-2"
                   src="./Flower Asset/pngwing 5.png"
                   alt="Pink flower"
                 />
@@ -74,7 +73,7 @@
             <div class="feature-box box-background-3">
               <div class="feature-photo">
                 <img
-                  class="feature-image-3"
+                  class="feature-image flower-image-3"
                   src="./Flower Asset/pngwing 7.png"
                   alt="Pink flower"
                 />
@@ -161,28 +160,24 @@
           <div class="social-box">
             <div class="social-image-box-1">
               <img
-                class="social-flower-image image-1"
                 src="./Flower Asset/Flower 01.png"
                 alt="flower image"
               />
             </div>
             <div class="social-image-box-2">
               <img
-                class="social-flower-image image-2"
                 src="./Flower Asset/Rectangle 4.png"
                 alt="flower image"
               />
             </div>
             <div class="social-image-box-3">
               <img
-                class="social-flower-image image-3"
                 src="./Flower Asset/Rectangle 5.png"
                 alt="flower image"
               />
             </div>
             <div class="social-image-box-4">
               <img
-                class="social-flower-image image-4"
                 src="./Flower Asset/Rectangle 6.png"
                 alt="flower image"
               />
